# assistant-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml
migrations/: 20251114125926_initial.sql  20251201053113_add_class_deduction_history.sql  20251208044813_daily_practice_log.sql
src/: bot.rs  commands.rs  config.rs  errors.rs  handlers.rs  keyboards.rs  main.rs  middlewares.rs  rate_limiter.rs  repositories.rs  services.rs  state.rs  test_utils.rs  uow.rs  utils.rs
src/handlers/: class.rs  command.rs  common.rs  daily_practice.rs  daily_practice_log.rs
src/repositories/: class.rs  class_deduction_history.rs  daily_practice_log.rs  user.rs
src/services/: class.rs  daily_practice_log.rs  prelude.rs  user.rs
